Added text to about

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -10,6 +10,7 @@
     <body>
         <div class="main-content">
             {{>headers}}
+            <p>This site is created by Avinash Rana. Its uses data from mapbox and weather stack!!</p>
             <img class="portrait" src="./img/robots writing 0.png">
         </div>
         
